switched out folders and finished assignment

--- a/index.html
+++ b/index.html
@@ -20,17 +20,19 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
-        <section class="wrapper">
+        <section class="flex-container">
+          <header><h1>Welcome to Executive</h1></header>
+          <main><p>This is a body of text all about executive towing and how amazingly awesome they are!<p></main>
             <div class="div-1">
-                <h2>Service</h2>
+                <p><span>Service</span><br> We work hard and go out of our way to ensure your car is treated like our car</p>
             </div>
             <div class="div-2">
-                <h2>Communication</h2>
+                <p><span>Knowledge</span><br> We've accumulated generations of experience to ensure your car is handled and moved without worry.</p>
             </div>
             <div class="div-3">
-                <h2>Professionalism</h2>
+                <p><span>appreciation</span><br> We know there are a many options to tow your car, and want to ensure your move is handled gracefully and smoothly.</p>
             </div>
+            <footer><p>Call us anytime! We are open 24 hours a day, 7 days a week, 365 days a year!</p></footer>
         </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
